src/styles/_widgets.scss
.below-header {
  padding: 5px;
}

.below-header + #content {
  margin-top: 0;
}

.widget {
    padding-top: 0;
    padding-bottom: 2.5rem;
}

.widget:last-child {
  padding-bottom: 0;
}

.widget-title {
  font-weight: 500;
  text-transform: uppercase;
  font-size: 95%;
  margin-top: 0;
  margin-bottom: $size-element-spacing;
  letter-spacing: 0.8px;
  color: #888;
}

.widget .search-form:first-child {
  margin-top: 0;

  .search-box {
    margin-top: 0;
  }
}

.widget ul {
  list-style: none;
  padding-left: 0;
}


.widget ul li a {
  color: #5e5e5e;
}

.widget_calendar {
  td {
    padding: 0.8rem;
    text-align: center;
  }
}

.wp-tag-cloud {
  li {
    display: inline-block;
    margin: 10px 0 0 0;
  }
  
  a {
    @extend .button;
    @extend .button.button-ghost;
    
    display: block;
    margin-top: 0;
    padding: 10px 15px;
    line-height: 1;
    border-radius: 3px;
  }
}

.featured-posts-widget {
  li {
    margin-bottom: 1rem;
  }

  .thumbnail {    
    background-color: #eee;
    margin-top: 3px;
    width: 64px;
    height: 64px;
  }

  .thumbnail img {
    border-radius: 3px;
  }

  .media-left .thumbnail + .media-body {
    padding-left: 1rem;
    margin-left: 64px;
    min-height: 64px;
  }

  .entry-title {
    font-weight: 500;
    font-size: 0.93rem;
    line-height: 1;
  }
}

.footer .widget-area {
  margin-top: $size-element-spacing;
}

.footer .widget-title {
  font-size: 85%;
}

